inactive button removed. updated backgrounds

--- a/packages/storybook-html/src/components/core/apply-colour.story.mdx
+++ b/packages/storybook-html/src/components/core/apply-colour.story.mdx
@@ -154,12 +154,6 @@ Icons should generally be the same colour as any adjacent text
       <td class="uqds-table__item" data-title="Variable:"><code>$link-hover-color</code></td>
       <td class="uqds-table__item" data-title="Usage:">Link and button hover colour</td>
     </tr>
-  <tr  class="uqds-table__row">
-    <td class="uqds-table__item"><div class="uqds-colour__palette uqds-text-bgcolor"></div></td>
-    <td class="uqds-table__item" data-title="Name:">TBA</td>
-    <td class="uqds-table__item" data-title="Variable:"><code>$uq-tba</code></td>
-    <td class="uqds-table__item" data-title="Usage:">Inactive button state</td>
-  </tr>
 </tbody>
 </table>
 
@@ -182,19 +176,19 @@ These can be used with dark and purple text.
     <th class="uqds-table__heading">Variable</th>
     <th class="uqds-table__heading">Usage</th>
   </tr>  <tr  class="uqds-table__row">
-    <td class="uqds-table__item"><div class="uqds-colour__palette uqds-text-bgcolor"></div></td>
-    <td class="uqds-table__item" data-title="Name:">TBA</td>
-    <td class="uqds-table__item" data-title="Variable:"><code>$uq-tba</code></td>
-    <td class="uqds-table__item" data-title="Usage:">TBA</td>
+    <td class="uqds-table__item"><div class="uqds-colour__palette uqds-colour--white"></div></td>
+    <td class="uqds-table__item" data-title="Name:">White</td>
+    <td class="uqds-table__item" data-title="Variable:"><code>$uq-white</code></td>
+    <td class="uqds-table__item" data-title="Usage:">Default background for all usage</td>
   </tr>
   <tr  class="uqds-table__row">
-    <td class="uqds-table__item"><div class="uqds-colour__palette uqds-text-bgcolor"></div></td>
-    <td class="uqds-table__item" data-title="Name:">TBA</td>
-    <td class="uqds-table__item" data-title="Variable:"><code>$uq-tba</code></td>
+    <td class="uqds-table__item"><div class="uqds-colour__palette uqds-neutral-light20"></div></td>
+    <td class="uqds-table__item" data-title="Name:">Light grey</td>
+    <td class="uqds-table__item" data-title="Variable:"><code>$uq-neutral-light20</code></td>
     <td class="uqds-table__item" data-title="Usage:">
     <ul>
-      <li>TBA</li>
-      <li>TBA</li>
+      <li>Alternating sections of content</li>
+      <li>Creating secondary or supporting content containers</li>
     </ul>
     </td>
   </tr>
@@ -213,20 +207,14 @@ These can be used with white text.
     <th class="uqds-table__heading">Variable</th>
     <th class="uqds-table__heading">Usage</th>
   </tr>  <tr  class="uqds-table__row">
-    <td class="uqds-table__item"><div class="uqds-colour__palette uqds-text-bgcolor"></div></td>
-    <td class="uqds-table__item" data-title="Name:">TBA</td>
-    <td class="uqds-table__item" data-title="Variable:"><code>$uq-tba</code></td>
-    <td class="uqds-table__item" data-title="Usage:">TBA</td>
-  </tr>
-  <tr  class="uqds-table__row">
-    <td class="uqds-table__item"><div class="uqds-colour__palette uqds-text-bgcolor"></div></td>
-    <td class="uqds-table__item" data-title="Name:">TBA</td>
-    <td class="uqds-table__item" data-title="Variable:"><code>$uq-tba</code></td>
+    <td class="uqds-table__item"><div class="uqds-colour__palette uqds-colour--purple"></div></td>
+    <td class="uqds-table__item" data-title="Name:">UQ purple</td>
+    <td class="uqds-table__item" data-title="Variable:"><code>$uq-purple</code></td>
     <td class="uqds-table__item" data-title="Usage:">
-    <ul>
-      <li>TBA</li>
-      <li>TBA</li>
-    </ul>
+      <ul>
+        <li>Section background, when major breaks in topic occur</li>
+        <li>Banners when a image is not possible or available</li>
+      </ul>
     </td>
   </tr>
 </tbody>
