storybook-html: grid-menu docs - remove Canvas elems and story height

--- a/packages/storybook-html/src/components/grid-menu/grid-menu.docs.mdx
+++ b/packages/storybook-html/src/components/grid-menu/grid-menu.docs.mdx
@@ -12,9 +12,7 @@ One where the height of the list elements is by default set to 'auto' and the ot
 
 ### a) Grid menu - Height auto 
 
-<Canvas withToolbar>
-    <Story id="components-grid-menu--grid-menu-all" height='1850px' />
-</Canvas>
+<Story id="components-grid-menu--grid-menu-all" />
 
 ```html
 <h2>Grid menu default</h2>
@@ -160,9 +158,7 @@ One where the height of the list elements is by default set to 'auto' and the ot
 ### b) Grid menu - Height equalised
 In this category of the grid menu component, if the height of an item is bigger the alignment of the items are taken care of via JS.
 
-<Canvas withToolbar>
-    <Story id="components-grid-menu--equalised" height='400px' />
-</Canvas>
+<Story id="components-grid-menu--equalised" />
 
 ```html
 <h3>Grid menu - Equalised</h3>
