--- a/packages/storybook-html/src/components/core/apply-colour.story.mdx
+++ b/packages/storybook-html/src/components/core/apply-colour.story.mdx
@@ -240,26 +240,26 @@ Example: alerts. -- *add link eventually*
   </tr>  
   <tr  class="uqds-table__row">
     <td class="uqds-table__item"><div class="uqds-colour__palette uqds-text-bgcolor"></div></td>
-    <td class="uqds-table__item" data-title="Name:">TBA green</td>
-    <td class="uqds-table__item" data-title="Variable:"><code>$uq-tba</code></td>
+    <td class="uqds-table__item" data-title="Name:">Success</td>
+    <td class="uqds-table__item" data-title="Variable:"><code>$alert-success-bg-color</code></td>
     <td class="uqds-table__item" data-title="Usage:">Success, available</td>
   </tr>
   <tr class="uqds-table__row">
     <td class="uqds-table__item"><div class="uqds-colour__palette uqds-text-bgcolor"></div></td>
-    <td class="uqds-table__item" data-title="Name:">TBA yellow</td>
-    <td class="uqds-table__item" data-title="Variable:"><code>$uq-tba</code></td>
+    <td class="uqds-table__item" data-title="Name:">Warning</td>
+    <td class="uqds-table__item" data-title="Variable:"><code>$alert-warning-bg-color</code></td>
     <td class="uqds-table__item" data-title="Usage:">Warning</td>
   </tr>
   <tr  class="uqds-table__row">
     <td class="uqds-table__item"><div class="uqds-colour__palette uqds-text-bgcolor"></div></td>
-    <td class="uqds-table__item" data-title="Name:">TBA red</td>
-    <td class="uqds-table__item" data-title="Variable:"><code>$uq-tba</code></td>
+    <td class="uqds-table__item" data-title="Name:">Danger</td>
+    <td class="uqds-table__item" data-title="Variable:"><code>$alert-danger-bg-color</code></td>
     <td class="uqds-table__item" data-title="Usage:">Error, unavailable</td>
   </tr>
   <tr  class="uqds-table__row">
     <td class="uqds-table__item"><div class="uqds-colour__palette uqds-text-bgcolor"></div></td>
-    <td class="uqds-table__item" data-title="Name:">TBA blue</td>
-    <td class="uqds-table__item" data-title="Variable:"><code>$uq-tba</code></td>
+    <td class="uqds-table__item" data-title="Name:">Information</td>
+    <td class="uqds-table__item" data-title="Variable:"><code>$alert-info-bg-color</code></td>
     <td class="uqds-table__item" data-title="Usage:">For information</td>
   </tr>
 </tbody>
@@ -315,20 +315,15 @@ TBA TBA TBA
     <th class="uqds-table__heading">Name</th>
     <th class="uqds-table__heading">Variable</th>
     <th class="uqds-table__heading">Usage</th>
-  </tr>  <tr  class="uqds-table__row">
-    <td class="uqds-table__item"><div class="uqds-colour__palette uqds-text-bgcolor"></div></td>
-    <td class="uqds-table__item" data-title="Name:">TBA</td>
-    <td class="uqds-table__item" data-title="Variable:"><code>$uq-tba</code></td>
-    <td class="uqds-table__item" data-title="Usage:">TBA</td>
-  </tr>
-  <tr  class="uqds-table__row">
-    <td class="uqds-table__item"><div class="uqds-colour__palette uqds-text-bgcolor"></div></td>
-    <td class="uqds-table__item" data-title="Name:">TBA</td>
-    <td class="uqds-table__item" data-title="Variable:"><code>$uq-tba</code></td>
+  </tr>  
+    <tr  class="uqds-table__row">
+    <td class="uqds-table__item"><div class="uqds-colour__palette uqds-neutral-light20"></div></td>
+    <td class="uqds-table__item" data-title="Name:">Light grey</td>
+    <td class="uqds-table__item" data-title="Variable:"><code>$uq-neutral-light20</code></td>
     <td class="uqds-table__item" data-title="Usage:">
     <ul>
-      <li>TBA</li>
-      <li>TBA</li>
+      <li>Component borders</li>
+      <li>dividing lines and horizontal rules</li>
     </ul>
     </td>
   </tr>
