Colour updates and  removed files

--- a/packages/storybook-html/src/components/core/colour-apply.story.mdx
+++ b/packages/storybook-html/src/components/core/colour-apply.story.mdx
@@ -239,74 +239,33 @@ Example: alerts. -- *add link eventually*
     <th class="uqds-table__heading">Usage</th>
   </tr>  
   <tr  class="uqds-table__row">
-    <td class="uqds-table__item"><div class="uqds-colour__palette uqds-text-bgcolor"></div></td>
+    <td class="uqds-table__item"><div class="uqds-colour__palette uqds-colour--success"></div></td>
     <td class="uqds-table__item" data-title="Name:">Success</td>
-    <td class="uqds-table__item" data-title="Variable:"><code>$alert-success-bg-color</code></td>
+    <td class="uqds-table__item" data-title="Variable:"><code>$success-color</code></td>
     <td class="uqds-table__item" data-title="Usage:">Success, available</td>
   </tr>
   <tr class="uqds-table__row">
-    <td class="uqds-table__item"><div class="uqds-colour__palette uqds-text-bgcolor"></div></td>
+    <td class="uqds-table__item"><div class="uqds-colour__palette uqds-colour--warning"></div></td>
     <td class="uqds-table__item" data-title="Name:">Warning</td>
-    <td class="uqds-table__item" data-title="Variable:"><code>$alert-warning-bg-color</code></td>
+    <td class="uqds-table__item" data-title="Variable:"><code>$warning-color</code></td>
     <td class="uqds-table__item" data-title="Usage:">Warning</td>
   </tr>
   <tr  class="uqds-table__row">
-    <td class="uqds-table__item"><div class="uqds-colour__palette uqds-text-bgcolor"></div></td>
+    <td class="uqds-table__item"><div class="uqds-colour__palette uqds-colour--danger"></div></td>
     <td class="uqds-table__item" data-title="Name:">Danger</td>
-    <td class="uqds-table__item" data-title="Variable:"><code>$alert-danger-bg-color</code></td>
+    <td class="uqds-table__item" data-title="Variable:"><code>$danger-color</code></td>
     <td class="uqds-table__item" data-title="Usage:">Error, unavailable</td>
   </tr>
   <tr  class="uqds-table__row">
-    <td class="uqds-table__item"><div class="uqds-colour__palette uqds-text-bgcolor"></div></td>
+    <td class="uqds-table__item"><div class="uqds-colour__palette uqds-colour--info"></div></td>
     <td class="uqds-table__item" data-title="Name:">Information</td>
-    <td class="uqds-table__item" data-title="Variable:"><code>$alert-info-bg-color</code></td>
-    <td class="uqds-table__item" data-title="Usage:">For information</td>
-  </tr>
-</tbody>
-</table>
-
-## Dark colours
-
-These can be used on white backgrounds or with white text.
-
-<table class="uqds-table">
-<tbody class="uqds-table__body">
-  <tr class="uqds-table__mobile-heading">
-    <th class="uqds-table__heading">Example</th>
-    <th class="uqds-table__heading">Name</th>
-    <th class="uqds-table__heading">Variable</th>
-    <th class="uqds-table__heading">Usage</th>
-  </tr>  
-  <tr class="uqds-table__row">
-    <td class="uqds-table__item"><div class="uqds-colour__palette uqds-text-bgcolor"></div></td>
-    <td class="uqds-table__item" data-title="Name:">TBA green</td>
-    <td class="uqds-table__item" data-title="Variable:"><code>$uq-tba</code></td>
-    <td class="uqds-table__item" data-title="Usage:">Success, available</td>
-  </tr>
-  <tr class="uqds-table__row">
-    <td class="uqds-table__item"><div class="uqds-colour__palette uqds-text-bgcolor"></div></td>
-    <td class="uqds-table__item" data-title="Name:">TBA yellow</td>
-    <td class="uqds-table__item" data-title="Variable:"><code>$uq-tba</code></td>
-    <td class="uqds-table__item" data-title="Usage:">Warning</td>
-  </tr>
-  <tr class="uqds-table__row">
-    <td class="uqds-table__item"><div class="uqds-colour__palette uqds-text-bgcolor"></div></td>
-    <td class="uqds-table__item" data-title="Name:">TBA red</td>
-    <td class="uqds-table__item" data-title="Variable:"><code>$uq-tba</code></td>
-    <td class="uqds-table__item" data-title="Usage:">Error, unavailable</td>
-  </tr>
-  <tr class="uqds-table__row">
-    <td class="uqds-table__item"><div class="uqds-colour__palette uqds-text-bgcolor"></div></td>
-    <td class="uqds-table__item" data-title="Name:">TBA blue</td>
-    <td class="uqds-table__item" data-title="Variable:"><code>$uq-tba</code></td>
+    <td class="uqds-table__item" data-title="Variable:"><code>$info-color</code></td>
     <td class="uqds-table__item" data-title="Usage:">For information</td>
   </tr>
 </tbody>
 </table>
 
 # Borders
-
-TBA TBA TBA
 
 <table class="uqds-table">
 <tbody class="uqds-table__body">
