storybook-html: add more intro to breakpoints docs

--- a/packages/storybook-html/src/components/core/breakpoints.story.mdx
+++ b/packages/storybook-html/src/components/core/breakpoints.story.mdx
@@ -4,6 +4,13 @@ import { Meta } from '@storybook/addon-docs/blocks';
 
 # Breakpoints
 
+Based on current display trends (as well as standard practice of covering mobile
+& tablet devices to desktop/laptop screens), our *mobile-first* breakpoints are:
+- tablet: 37.5rem (~600px),
+- and desktop/laptop: 74rem (~1200px).
+
+Full details, including Sass variables as follows:
+
 | Name(s)                 | Constant variable | Default constant | Media query string variables | Default viewport width ranges |
 |-------------------------|-------------------|------------------|------------------------------|-------------------------------|
 | **\* (mobile)**         | N/A | N/A | N/A | 0—∞ |
