storybook-html: add visibility style rule docs

--- a/packages/storybook-html/src/components/body/body-utilities.docs.mdx
+++ b/packages/storybook-html/src/components/body/body-utilities.docs.mdx
@@ -37,8 +37,7 @@ Coming soon
 Coming soon
 
 ## Visibility
-
-Coming soon
+<Story id="components-body-utilities--visibility-utils" />
 
 ## Embedded media
 
