--- a/packages/storybook-html/src/components/core/colour-base.story.mdx
+++ b/packages/storybook-html/src/components/core/colour-base.story.mdx
@@ -5,24 +5,22 @@ import './_colour.scss';
 
 # Base colour palette
 
-To maintain brand consistency you should reference the utility colours provided using variable names over actual colour values shuch as Hex or RGB. 
+The base colours are used to create all colour variations throughout the design system.  Always start with a base colour when you need a colour that is not already defined in the system. 
 
-- Base colours are used to create all variations throughout the design system.
-- Do not create random colours, always start with a base colour reference.
-- Utility colour guidelines should be followed before using these values
+Use variable names over HEX or RGB values to ensure consistency can be maintained.
 
-**Table of Content**
+**On this page**
 - [UQ brand colours](#uq-brand-colours)
   - [Primary colours](#primary-colours)
   - [Secondary colours](#secondary-colours)
   - [Neutral tones](#neutral-tones)
 - [Custom colours](#custom-colours)
-  - [link](#link)
-  - [Red tints](#red-tints)
+  - [Link](#link)
+
 
 ## UQ brand colours
 
-These are the core brand colours for the University of Queensland.
+These are the core brand colours for the University of Queensland. Refer to the brand guidelines for more information about how they are to be used.
 
 ### Primary colours
 
@@ -38,7 +36,7 @@ These are the core brand colours for the University of Queensland.
     </tr>
     <tr  class="uqds-table__row">
       <td class="uqds-table__item"><div class="uqds-colour__palette uqds-colour--purple"></div></td>
-      <td class="uqds-table__item" data-title="Name:">UQ Purple</td>
+      <td class="uqds-table__item" data-title="Name:">UQ purple</td>
       <td class="uqds-table__item" data-title="Variable:"><code>$uq-purple</code></td>
       <td class="uqds-table__item" data-title="HEX:">#51247A</td>
       <td class="uqds-table__item" data-title="RGB:">R81 G36 B122</td>
@@ -64,8 +62,8 @@ These are the core brand colours for the University of Queensland.
   </table>
 
 ### Secondary colours
-These secondary colours play a supporting role to our primary colour palette. 
-They are used to add accents of contrast to aid our communications.
+
+These secondary colours should always play a supporting role to our primary colour palette. In user interfaces, the secondary are only used where additional colour is needed to present information (e.g. alerts, status, charts, diagrams).
 
   <table class="uqds-table">
   <tbody class="uqds-table__body">
@@ -201,35 +199,6 @@ Neutral tones can be used as a background colour.
   </tbody>
   </table>
 
-### Red tints 
 
-  <table class="uqds-table">
-  <tbody class="uqds-table__body">
-    <tr class="uqds-table__mobile-heading">
-      <th class="uqds-table__heading">Example</th>
-      <th class="uqds-table__heading">Name</th>
-      <th class="uqds-table__heading">Variable</th>
-      <th class="uqds-table__heading">HEX</th>
-      <th class="uqds-table__heading">RGB</th>
-      <th class="uqds-table__heading">Usage</th>
-    </tr>
-    <tr  class="uqds-table__row">
-      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-red-dark20"></div></td>
-      <td class="uqds-table__item" data-title="Name:">UQ Red Dark 20</td>
-      <td class="uqds-table__item" data-title="Variable:"><code>$uq-red-dark20</code></td>
-      <td class="uqds-table__item" data-title="HEX:">#be1b38</td>
-      <td class="uqds-table__item" data-title="RGB:"></td>
-      <td class="uqds-table__item" data-title="Usage:">Red tint 20%</td>
-    </tr>
-    <tr  class="uqds-table__row">
-      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-red-dark40"></div></td>
-      <td class="uqds-table__item" data-title="Name:">UQ Red Dark 40</td>
-      <td class="uqds-table__item" data-title="Variable:"><code>$uq-red-dark40</code></td>
-      <td class="uqds-table__item" data-title="HEX:">#9b1129</td>
-      <td class="uqds-table__item" data-title="RGB:"></td>
-      <td class="uqds-table__item" data-title="Usage:">Red tint 40%</td>
-    </tr>
-  </tbody>
-  </table>
 
   
