--- a/packages/storybook-html/src/components/core/colour-apply.story.mdx
+++ b/packages/storybook-html/src/components/core/colour-apply.story.mdx
@@ -35,17 +35,20 @@ The purple gradient is already incorporated in the header, footer and other comp
     <th class="uqds-table__heading">Example</th>
     <th class="uqds-table__heading">Name</th>
     <th class="uqds-table__heading">Variable</th>
+    <th class="uqds-table__heading">HEX</th>
     <th class="uqds-table__heading">Usage</th>
   </tr>  <tr  class="uqds-table__row">
     <td class="uqds-table__item"><div class="uqds-colour__palette uqds-colour--purple"></div></td>
     <td class="uqds-table__item" data-title="Name:">UQ Purple</td>
     <td class="uqds-table__item" data-title="Variable:"><code>$uq-purple</code></td>
+    <td class="uqds-table__item" data-title="HEX:">#51247A</td>
     <td class="uqds-table__item" data-title="Usage:">Reflect UQ brand in accents and emphasis</td>
   </tr>
   <tr  class="uqds-table__row">
     <td class="uqds-table__item"><div class="uqds-colour__palette uqds-purple-gradient"></div></td>
     <td class="uqds-table__item" data-title="Name:">Purple Gradient</td>
     <td class="uqds-table__item" data-title="Variable:"><code>$uq-purple-gradient</code></td>
+    <td class="uqds-table__item" data-title="HEX:">#51247A #962A8B</td>
     <td class="uqds-table__item" data-title="Usage:">
     <ul>
       <li>used horizontally, <code>$uq-purple</code> left to <code>$uq-light-purple</code> right</li>
@@ -73,12 +76,14 @@ Icons should generally be the same colour as any adjacent text
     <th class="uqds-table__heading">Example</th>
     <th class="uqds-table__heading">Name</th>
     <th class="uqds-table__heading">Variable</th>
+    <th class="uqds-table__heading">HEX</th>
     <th class="uqds-table__heading">Usage</th>
   </tr>
   <tr  class="uqds-table__row">
     <td class="uqds-table__item"><strong class="uqds-text-color--default">Default text</strong> <div class="uqds-colour__palette uqds-text-bgcolor"></div></td>
     <td class="uqds-table__item" data-title="Name:">Default text</td>
     <td class="uqds-table__item" data-title="Variable:"><code>$text</code></td>
+    <td class="uqds-table__item" data-title="HEX:">#2b2a29</td>
     <td class="uqds-table__item" data-title="Usage:">
     <ul>
     <li>We avoid solid black for text, it is too harsh on screens for reading</li>
@@ -90,6 +95,7 @@ Icons should generally be the same colour as any adjacent text
     <td class="uqds-table__item"><strong class="uqds-text-color--secondary">Secondary text</strong> <div class="uqds-colour__palette uqds-neutral-dark40"></div></td>
     <td class="uqds-table__item" data-title="Name:">Secondary text</td>
     <td class="uqds-table__item" data-title="Variable:"><code>$uq-neutral-dark40</code></td>
+    <td class="uqds-table__item" data-title="HEX:">#817d7a</td>
     <td class="uqds-table__item" data-title="Usage:">
     <ul>
     <li>Used to reduce the emphasis of text</li>
@@ -102,6 +108,7 @@ Icons should generally be the same colour as any adjacent text
     <td class="uqds-table__item"><strong class="uqds-text-color--white">White text</strong> <div class="uqds-colour__palette uqds-colour--white"></div></td>
     <td class="uqds-table__item" data-title="Name:">White text</td>
     <td class="uqds-table__item" data-title="Variable:"><code>$uq-white</code></td>
+    <td class="uqds-table__item" data-title="HEX:">#ffffff</td>
     <td class="uqds-table__item" data-title="Usage:">
     <ul>
       <li>Default text colour on dark backgrounds and imagery</li>
@@ -113,6 +120,7 @@ Icons should generally be the same colour as any adjacent text
     <td class="uqds-table__item"><strong class="uqds-text-color--purple">Purple Text</strong> <div class="uqds-colour__palette uqds-colour--purple"></div></td>
     <td class="uqds-table__item" data-title="Name:">Purple text</td>
     <td class="uqds-table__item" data-title="Variable:"><code>$uq-purple</code></td>
+    <td class="uqds-table__item" data-title="HEX:">#51247A</td>
     <td class="uqds-table__item" data-title="Usage:">
       <ul>
         <li>Used for content heading</li>
@@ -134,24 +142,28 @@ Icons should generally be the same colour as any adjacent text
       <th class="uqds-table__heading">Example</th>
       <th class="uqds-table__heading">Name</th>
       <th class="uqds-table__heading">Variable</th>
+      <th class="uqds-table__heading">HEX</th>
       <th class="uqds-table__heading">Usage</th>
     </tr>
     <tr  class="uqds-table__row">
       <td class="uqds-table__item"><div class="uqds-colour__palette uqds-link-color"></div></td>
       <td class="uqds-table__item" data-title="Name:">Link color</td>
       <td class="uqds-table__item" data-title="Variable:"><code>$link-color</code></td>
+      <td class="uqds-table__item" data-title="HEX:">#2377cb</td>
       <td class="uqds-table__item" data-title="Usage:">Default link and button colour</td>
     </tr>
     <tr  class="uqds-table__row">
       <td class="uqds-table__item"><div class="uqds-colour__palette uqds-link-active-color"></div></td>
       <td class="uqds-table__item" data-title="Name:">Link active color</td>
       <td class="uqds-table__item" data-title="Variable:"><code>$link-active-color</code></td>
+      <td class="uqds-table__item" data-title="HEX:">#005ea5</td>
       <td class="uqds-table__item" data-title="Usage:">Link and button active colour</td>
     </tr>
     <tr  class="uqds-table__row">
       <td class="uqds-table__item"><div class="uqds-colour__palette uqds-link-hover-color"></div></td>
       <td class="uqds-table__item" data-title="Name:">Link hover color</td>
       <td class="uqds-table__item" data-title="Variable:"><code>$link-hover-color</code></td>
+      <td class="uqds-table__item" data-title="HEX:">#005ea5</td>
       <td class="uqds-table__item" data-title="Usage:">Link and button hover colour</td>
     </tr>
 </tbody>
@@ -174,17 +186,20 @@ These can be used with dark and purple text.
     <th class="uqds-table__heading">Example</th>
     <th class="uqds-table__heading">Name</th>
     <th class="uqds-table__heading">Variable</th>
+    <th class="uqds-table__heading">HEX</th>
     <th class="uqds-table__heading">Usage</th>
   </tr>  <tr  class="uqds-table__row">
     <td class="uqds-table__item"><div class="uqds-colour__palette uqds-colour--white"></div></td>
     <td class="uqds-table__item" data-title="Name:">White</td>
     <td class="uqds-table__item" data-title="Variable:"><code>$uq-white</code></td>
+    <td class="uqds-table__item" data-title="HEX:">#ffffff</td>
     <td class="uqds-table__item" data-title="Usage:">Default background for all usage</td>
   </tr>
   <tr  class="uqds-table__row">
     <td class="uqds-table__item"><div class="uqds-colour__palette uqds-neutral-light20"></div></td>
     <td class="uqds-table__item" data-title="Name:">Light grey</td>
     <td class="uqds-table__item" data-title="Variable:"><code>$uq-neutral-light20</code></td>
+    <td class="uqds-table__item" data-title="HEX:">#f7f6f5</td>
     <td class="uqds-table__item" data-title="Usage:">
     <ul>
       <li>Alternating sections of content</li>
@@ -205,11 +220,13 @@ These can be used with white text.
     <th class="uqds-table__heading">Example</th>
     <th class="uqds-table__heading">Name</th>
     <th class="uqds-table__heading">Variable</th>
+    <th class="uqds-table__heading">HEX</th>
     <th class="uqds-table__heading">Usage</th>
   </tr>  <tr  class="uqds-table__row">
     <td class="uqds-table__item"><div class="uqds-colour__palette uqds-colour--purple"></div></td>
     <td class="uqds-table__item" data-title="Name:">UQ purple</td>
     <td class="uqds-table__item" data-title="Variable:"><code>$uq-purple</code></td>
+    <td class="uqds-table__item" data-title="HEX:">#</td>
     <td class="uqds-table__item" data-title="Usage:">
       <ul>
         <li>Section background, when major breaks in topic occur</li>
@@ -234,30 +251,35 @@ These can be used as background colours to default text, e.g. alerts.
     <th class="uqds-table__heading">Example</th>
     <th class="uqds-table__heading">Name</th>
     <th class="uqds-table__heading">Variable</th>
+    <th class="uqds-table__heading">HEX</th>
     <th class="uqds-table__heading">Usage</th>
   </tr>  
   <tr  class="uqds-table__row">
     <td class="uqds-table__item"><div class="uqds-colour__palette uqds-colour--success"></div></td>
     <td class="uqds-table__item" data-title="Name:">Success</td>
     <td class="uqds-table__item" data-title="Variable:"><code>$success-color</code></td>
+    <td class="uqds-table__item" data-title="HEX:">#d5eeca</td>
     <td class="uqds-table__item" data-title="Usage:">Success, available</td>
   </tr>
   <tr class="uqds-table__row">
     <td class="uqds-table__item"><div class="uqds-colour__palette uqds-colour--warning"></div></td>
     <td class="uqds-table__item" data-title="Name:">Warning</td>
     <td class="uqds-table__item" data-title="Variable:"><code>$warning-color</code></td>
+    <td class="uqds-table__item" data-title="HEX:">#ffe0ad</td>
     <td class="uqds-table__item" data-title="Usage:">Warning; there <em>may</em> be a problem</td>
   </tr>
   <tr  class="uqds-table__row">
     <td class="uqds-table__item"><div class="uqds-colour__palette uqds-colour--danger"></div></td>
     <td class="uqds-table__item" data-title="Name:">Danger</td>
     <td class="uqds-table__item" data-title="Variable:"><code>$danger-color</code></td>
+    <td class="uqds-table__item" data-title="HEX:">#Ffacac</td>
     <td class="uqds-table__item" data-title="Usage:">Error, unavailable; there <em>is</em> a problem</td>
   </tr>
   <tr  class="uqds-table__row">
     <td class="uqds-table__item"><div class="uqds-colour__palette uqds-colour--info"></div></td>
     <td class="uqds-table__item" data-title="Name:">Information</td>
     <td class="uqds-table__item" data-title="Variable:"><code>$info-color</code></td>
+    <td class="uqds-table__item" data-title="HEX:">#d4f0ff</td>
     <td class="uqds-table__item" data-title="Usage:">Information that is neither positive or negative but important to know</td>
   </tr>
 </tbody>
@@ -274,30 +296,35 @@ These can be used on a white background or as background colours to white text, 
     <th class="uqds-table__heading">Example</th>
     <th class="uqds-table__heading">Name</th>
     <th class="uqds-table__heading">Variable</th>
+    <th class="uqds-table__heading">HEX</th>
     <th class="uqds-table__heading">Usage</th>
   </tr>  
   <tr  class="uqds-table__row">
     <td class="uqds-table__item" data-title="Example:">Not yet defined</td>
     <td class="uqds-table__item" data-title="Name:">Success</td>
     <td class="uqds-table__item" data-title="Variable:">Not yet defined</td>
+    <td class="uqds-table__item" data-title="HEX:">#</td>
     <td class="uqds-table__item" data-title="Usage:">Success, available</td>
   </tr>
   <tr class="uqds-table__row">
     <td class="uqds-table__item">Not yet defined</td>
     <td class="uqds-table__item" data-title="Name:">Warning</td>
     <td class="uqds-table__item" data-title="Variable:">Not yet defined</td>
+    <td class="uqds-table__item" data-title="HEX:">#</td>
     <td class="uqds-table__item" data-title="Usage:">Warning; there <em>may</em> be a problem</td>
   </tr>
   <tr  class="uqds-table__row">
     <td class="uqds-table__item"><div class="uqds-colour__palette uqds-red-dark20"></div></td>
     <td class="uqds-table__item" data-title="Name:">UQ Red Dark 40</td>
     <td class="uqds-table__item" data-title="Variable:"><code>$uq-red-dark20</code></td>
+    <td class="uqds-table__item" data-title="HEX:">#9b1129</td>
     <td class="uqds-table__item" data-title="Usage:">Error, unavailable; there <em>is</em> a problem</td>
   </tr>
   <tr  class="uqds-table__row">
     <td class="uqds-table__item">Not yet defined</td>
     <td class="uqds-table__item" data-title="Name:">Information</td>
     <td class="uqds-table__item" data-title="Variable:">Not yet defined</td>
+    <td class="uqds-table__item" data-title="HEX:">#</td>
     <td class="uqds-table__item" data-title="Usage:">Information that is neither positive or negative but important to know</td>
   </tr>
 </tbody>
@@ -311,12 +338,14 @@ These can be used on a white background or as background colours to white text, 
     <th class="uqds-table__heading">Example</th>
     <th class="uqds-table__heading">Name</th>
     <th class="uqds-table__heading">Variable</th>
+    <th class="uqds-table__heading">HEX</th>
     <th class="uqds-table__heading">Usage</th>
   </tr>  
     <tr  class="uqds-table__row">
     <td class="uqds-table__item"><div class="uqds-colour__palette uqds-neutral-light20"></div></td>
     <td class="uqds-table__item" data-title="Name:">Light grey</td>
     <td class="uqds-table__item" data-title="Variable:"><code>$uq-neutral-light20</code></td>
+    <td class="uqds-table__item" data-title="HEX:">#f7f6f5</td>
     <td class="uqds-table__item" data-title="Usage:">
     <ul>
       <li>Component borders</li>
